<resources>
  <string name="app_name">Plutus</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="pcls_residual">PCLS Calculator</string>
  <string name="pension">Pension (£):</string>
  <string name="commutation_factor">Commutation Factor:</string>
  <string name="money_purchase_fund">Pension Pot (£):</string>
  <string name="pension_hint">e.g. £1,000</string>
  <string name="commutation_factor_hint">e.g. 20</string>
  <string name="dc_fund_hint">e.g. £5,000</string>
  <string name="calculate">Calculate</string>
  <string name="db_pcls">Defined Benefit PCLS:</string>
  <string name="residual_pension">Residual Pension:</string>
  <string name="lta_used">Lifetime Allowance Used:</string>
  <string name="standard_pcls_title">PCLS Calculator</string>
  <string name="plutus_icon">Plutus icon</string>
  <string name="or">OR</string>
  <string name="combined_pcls">Combined PCLS:</string>
  <string name="date_calculator">Date Calculator</string>
  <string name="no_pension_toast">You need to enter a pension!</string>
  <string name="no_cf_toast">You need to enter a commutation factor!</string>
  <string name="pension_cf_zero_toast">The pension and commutation factors can\'t be 0!</string>
  <string name="start_date_hint">Please enter start date</string>
  <string name="end_date_hint">Please enter end date</string>
  <string name="date_calculator_text">Date Calculator</string>
  <string name="start_date_label">Start Date:</string>
  <string name="end_date">End Date:</string>
  <string name="complete_years">Complete Years:</string>
  <string name="complete_months">Complete Months:</string>
  <string name="complete_weeks">Complete Weeks</string>
  <string name="complete_days">Complete Days:</string>
  <string name="years_and_months">Years And Months:</string>
  <string name="years_and_days">Years and Days:</string>
  <string name="complete_tax_years">Complete Tax Years:</string>
  <string name="_6th_aprils_passed">6th Aprils Passed:</string>
  <string name="calculate_button">Calculate!</string>

  <string name="years_results">%1$d years</string>
  <string name="months_results">%1$d months</string>
  <string name="weeks_results">%1$d weeks</string>
  <string name="days_results">%1$d days</string>
  <string name="years_months_results">%1$d years and %2$d months</string>
  <string name="years_days_results">%1$d years and %2$d days</string>
  <string name="tax_years_results">%1$d tax years</string>
  <string name="sixth_aprils_results">%1$d 6th Aprils passed</string>
  <string name="no_start_date_entered">You need to enter a start date!</string>
  <string name="no_end_date_entered">You need to enter an end date!</string>
  <string name="end_date_after_start_date">The end date cannot be before the start date!</string>
  <string name="revaluation_calculator">Revaluation Calculator</string>
  <string name="inflation_information">Inflation Information</string>
  <string name="ok">OK</string>
  <string name="full_pension">Full Pension:</string>
  <string name="rpi_contents_text">Retail Price Index (RPI)</string>
  <string name="cpi_contents_text">Consumer Price Index (CPI)</string>
  <string name="gmp_contents_text">GMP Fixed Revaluation Rates</string>
  <string name="cpi_error">There was an error retrieving CPI data…</string>
  <string name="rpi_error">There was an error retrieving RPI data…</string>
  <string name="connection_error">Connection error…</string>
  <string name="start_date">Start Date</string>
  <string name="gmp_end_date">End Date</string>
  <string name="fixed_rate">Fixed Rate</string>
  <string name="gmp_fixed_revaluation_rates">GMP Fixed Revaluation Rates</string>
  <string name="rpi_12_month_percentages">RPI 12-Month Percentages</string>
  <string name="cpi_12_month_percentages">CPI 12-Month Percentages</string>
  <string name="ufpls">UFPLS:</string>
  <string name="annuity_purchased">Annuity Purchased:</string>
  <string name="cpi_revaluation_max_5">CPI Revaluation (Max 5%):</string>
  <string name="cpi_revaluation_max_2_5">CPI Revaluation (Max 2.5%):</string>
  <string name="rpi_revaluation_max_5">RPI Revaluation (Max 5%):</string>
  <string name="rpi_revaluation_max_2_5">RPI Revaluation (Max 2.5%):</string>
  <string name="gmp_revaluation_complete_tax_years">GMP Revaluation (Tax Years):</string>
  <string name="gmp_revaluation_sixth_aprils">GMP Revaluation (6th Aprils):</string>
  <string name="no_revaluation">No CPI or RPI revaluation applicable with these dates.</string>
  <string name="no_future_reval">We do not hold CPI or RPI revaluation rates that far ahead.</string>
  <string name="reval_error">Something has gone wrong, try clicking the refresh button.</string>
  <string name="update_inflation_first">We do not hold any revaluation data, refreshing!</string>
  <string name="update_inflation">The inflation data needs updating, refreshing…</string>
  <string name="inflation_data_refreshed">Inflation data refreshed!</string>
  <string name="plutus">Plutus</string>
  <string name="about">About</string>
  <string name="opt1_description">Option 1</string>
  <string name="opt2_description">Option 2</string>
  <string name="opt3_description">Option 3</string>
  <string name="opt1a_description">Option 1A</string>
  <string name="opt1b_description">Option 1B</string>
  <string name="cpi">CPI</string>
  <string name="year">Year</string>
  <string name="month">Month</string>
  <string name="value">Value</string>
  <string name="about_text">
        There are a few tools here to help with pension administration related stuff, and I hope you
        find it useful in some form or another.  However, before you read further (or alternatively,
        click back and start playing with the tools) it must be emphasised that you should not use
        these when making financial decisions, they have not been checked by professionals (e.g.
        pension consultants or actuaries).\n\n
        <b>This app should be used as a guide only.</b>\n\n
        The latest Consumer Price Index (CPI) and Retail Price Index (RPI) data is obtained
        from the Office for National Statistics website, and these revaluation calculations are
        reliant on them. Additional, the calculation of revaluation figures and pension commencement
        lump sums are subject to change, with this app using the HMRC rules in place as at August 2021.\n\n
        <u>PCLS Calculator</u>\n
        Enter the full pension you have calculated, along with the commutation factor in place
        and any defined contribution or AVC funds which the Scheme rules allow to be combined with
        the defined benefits. The latter field can be left blank.\n
        A number of benefit options will then be provided, however it should be noted that Schemes
        may offer more or less options than those shown. The calculator also only takes into account
        a single commutation factor, and does not account for any restrictions on the amount of tax
        free cash that can be taken.\n\n
        <u>Date Calculator</u>\n
        Click on the text entry boxes to bring up the calendars dialogs, and choose the
        start and end dates, making sure the end date is after the start date (it won\'t count
        backwards!).  You will then be given the duration between the two dates in various units of
        time.  It should be noted that the end date is always included in the calculation.
        \n\n
        <u>Revaluation Calculator</u>\n
        As per the date calculator, enter the start and end dates, and the revaluation rates will
        be calculator for CPI, RPI and fixed rate Guaranteed Minimum Pension.  If this is your first
        time, the app will attempt to download the CPI and RPI data from the ONS website.  You can then
        attempt the calculation again.\n\n
        The calculator will only calculate the revaluation rate where the relevant rate is held in
        memory.  Data is downloaded whenever you try to calculate a revaluation rate, or when you
        access the relevant revaluation information pages in the app.
        To calculate the revaluation rate ending in a certain year, that year must be a maximum
        of one year after the latest September CPI or RPI in memory (i.e. to calculate the CPI revaluation
        rate when the end date is on 1 May 2022, you will need the September 2021 CPI figure in memory,
        which would normally be available in November 2021).\n\n
        If the start date is prior to 6 April 1978, the start date for the fixed GMP revaluation
        calculations will be treated as 6 April 1978, as this is when GMP was introduced.\n\n
        If the start date is prior to 1 January 1986, the CPI and RPI rates will be set to 1.0 as
        revaluation rates are not applied in these instances.\n\n
        If the start date is prior to 1 January 2009, the CPI and RPI max 2.5% rates will consider
        the start date to be 1 January 2009.\n\n
        <u>Inflation Information</u>\n
        There is various information here, with all the CPI, RPI, and their 12-month percentages
        downloaded from ons.gov.uk. The information is received from the following links:\n\n
        CPI:\n https://www.ons.gov.uk/economy/inflationandpriceindices/timeseries/d7bt/mm23/data\n\n
        CPI 12-Month Percentages:\n
        https://www.ons.gov.uk/economy/inflationandpriceindices/timeseries/d7g7/mm23/data \n\n
        RPI:\n https://www.ons.gov.uk/economy/inflationandpriceindices/timeseries/chaw/mm23/data \n\n
        RPI 12-Month Percentages:\n
        https://www.ons.gov.uk/economy/inflationandpriceindices/timeseries/czbh/mm23/data \n\n
        There are also the fixed GMP rates, however these are added manually so many not be up to date.\n\n
        <u>Further Information</u>\n
        Please check out https://github.com/Carkzis for more information on any planned updates to
        the app, or any other apps currently under development!\n\n</string>
  <string name="welcome_to_plutus">Welcome to Plutus!</string>
  <string name="lifetime_allowance">Lifetime Allowance (£):</string>
  <string name="pcls_warning">Remember!\n This is a <b>rough guide</b> only!\n <b>Always</b> check the scheme rules!</string>
  <string name="money_purchase_fund2">Money Purchase Fund:</string>
  <string-array name="lta_spinner_text">
    <item>1,073,100.00</item>
    <item>1,055,000.00</item>
    <item>1,030,000.00</item>
    <item>1,000,000.00</item>
    <item>1,250,000.00</item>
    <item>1,500,000.00</item>
    <item>1,800,000.00</item>
    <item>1,750,000.00</item>
    <item>1,650,000.00</item>
    <item>1,600,000.00</item>
  </string-array>
</resources>