<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <import type="android.view.View" />

    <import type="androidx.core.content.ContextCompat" />

    <variable
      name="viewmodel"
      type="com.example.android.plutus.contents.ContentsViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:id="@+id/contents_title_linear_layout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintBottom_toTopOf="@+id/pcls_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed"
      tools:ignore="UseCompoundDrawables">

      <ImageView
        android:id="@+id/icon_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:contentDescription="@string/plutus_icon"
        android:scaleType="center"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="VectorDrawableCompat"
        tools:layout_editor_absoluteX="152dp" />

      <TextView
        android:id="@+id/contents_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/coiny"
        android:text="@string/plutus"
        android:textSize="48sp"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="147dp" />

    </LinearLayout>

    <Button
      android:id="@+id/pcls_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:insetTop="0dp"
      android:insetBottom="0dp"
      android:text="@string/pcls_residual"
      app:backgroundTint="?colorPrimary"
      app:cornerRadius="0dp"
      app:layout_constraintBottom_toTopOf="@+id/date_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed" />

    <Button
      android:id="@+id/date_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:insetTop="0dp"
      android:insetBottom="0dp"
      android:text="@string/date_calculator"
      app:cornerRadius="0dp"
      app:layout_constraintBottom_toTopOf="@+id/revaluation_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/pcls_button" />

    <Button
      android:id="@+id/revaluation_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:insetTop="0dp"
      android:insetBottom="0dp"
      android:text="@string/revaluation_calculator"
      app:cornerRadius="0dp"
      app:layout_constraintBottom_toTopOf="@+id/inflation_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/date_button" />

    <Button
      android:id="@+id/inflation_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:insetTop="0dp"
      android:insetBottom="0dp"
      android:text="@string/inflation_information"
      app:cornerRadius="0dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/revaluation_button" />

    <TextView
      android:id="@+id/about_text"
      android:foreground="@drawable/rippler"
      android:focusable="true"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/button_border"
      android:clickable="true"
      android:padding="8dp"
      android:text="@string/about"
      android:textSize="20sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/inflation_button" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>