<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  tools:context=".inflation.InflationMainFragment">

  <data>

    <import type="android.view.View" />

    <import type="androidx.core.content.ContextCompat" />

    <variable
      name="viewmodel"
      type="com.example.android.plutus.inflation.InflationMainViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
      android:id="@+id/cpi_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/cpi_contents_text"
      app:layout_constraintBottom_toTopOf="@+id/rpi_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed" />

    <Button
      android:id="@+id/rpi_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/rpi_contents_text"
      app:layout_constraintBottom_toTopOf="@+id/gmp_fixed_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cpi_button" />

    <Button
      android:id="@+id/gmp_fixed_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:text="@string/gmp_contents_text"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rpi_button" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>